--- a/style.css
+++ b/style.css
@@ -132,7 +132,9 @@ This was only underlining the 'Home' link. Fix?
     margin: 0;
     padding: 200px 0 260px 0;
     background-size: cover;
+    
 }
+
 
 #page3 #project{
     display: inline-block;
@@ -142,6 +144,11 @@ This was only underlining the 'Home' link. Fix?
     height: 550px;
     margin-left: 25px;
     margin-right: 25px;
+}
+
+#page3 #project img{
+    width: 70px;
+    height: auto;
 }
 
 #page4{
