--- a/style.css
+++ b/style.css
@@ -93,6 +93,12 @@ This was only underlining the 'Home' link. Fix?
     font-size: 25px;
 }
 
+.anchor{
+    display: block;
+    height: 80px; /*same height as header*/
+    margin-top: -80px; /*same height as header*/
+    visibility: hidden;
+  }
 
 #page2{
     background-color: rgb(253, 253, 253);
@@ -135,15 +141,30 @@ This was only underlining the 'Home' link. Fix?
     
 }
 
+#page3 h1{
+    font-family: 'Rock Salt', cursive;
+    color: white;
+    text-align: center;
+    margin-bottom: 25px;
+    margin-right: 55px;
+}
+
 
 #page3 #project{
     display: inline-block;
     text-align: center;
-    background: rgba(255, 255, 255, 0.603);
+    background: rgba(255, 255, 255, 0.705);
     width: 250px;
     height: 550px;
     margin-left: 25px;
+    vertical-align: top;
     margin-right: 25px;
+}
+
+#page3 #project ul{
+    text-align: left;
+    padding-right: 10px;
+    padding-left: 25px;
 }
 
 #page3 #project img{
